[package]
name = "pools"
version = "0.1.10"
description = "Manages Saber liquidity pools."
edition = "2021"
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/pool-manager"
authors = ["Saber Team <team@saber.so>"]
license = "AGPL-3.0"
keywords = ["solana", "saber"]

[lib]
crate-type = ["cdylib", "lib"]
name = "pools"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.21"
anchor-spl = ">=0.21"
stable-swap-anchor = "^1.6.8"
stable-swap-client = "^1.6.9"
vipers = "^1.6"
